fixed overflow bug on shell

--- a/styling/mainLayout.css
+++ b/styling/mainLayout.css
@@ -1,7 +1,7 @@
 .content {
+    overflow-x: hidden;
     position: absolute;
     left: 20ch;
-    width: calc(100vw - 20ch);
+    width: calc(100vw - 22ch);
     top: 6ch;
-    height: calc(100vh - 6ch);
 }
